# chip8

./: .gitignore  CMakeLists.txt  PHASE_2_ROADMAP.md  README.md  imgui.ini
breakpoints/: README.md  example.txt
include/chip8/app/: emulator.h
include/chip8/compiler/: ast.h  codegen.h  lexer.h  parser.h  register_allocator.h
include/chip8/debug/: debug_frame.h  debugger.h  opcode_descriptions.h
include/chip8/debug_map/: debug_map.h
include/chip8/frontends/glfw/: glfw_frontend.h  imgui_panels.h  shaders.h
include/chip8/frontends/tui/: tui_commands.h  tui_constants.h  tui_draw.h  tui_input.h  tui_renderer.h  tui_state.h  tui_support.h
include/chip8/machine/: cpu.h  framebuffer.h  keypad_state.h  memory.h  rom_loader.h
lib/chip8_debug_map/: CMakeLists.txt  debug_map.cpp
lib/chip8_debug_map/test/: test_debug_map.cpp
src/: cpu.cpp  cpu.h  debug.h  io.h  io_glfw.cpp  io_glfw.h  main  main.cpp  memory.cpp  memory.h  out.txt  run  runner.cpp  runner.h  shaders.h
src/app/: emulator.cpp  emulator.h  runner.cpp  runner.h
src/debug/: breakpoints_loader.cpp  breakpoints_loader.h  debug.cpp  debug.h  debug_frame.h  debugger.cpp  debugger.h  disassemble_chip8.cpp  disassemble_chip8.h  format_debug_frame.cpp  format_debug_frame.h  opcode_descriptions.cpp
src/frontends/glfw/: glfw_frontend.cpp  glfw_frontend.h  imgui_panels.cpp  imgui_panels.h  io_glfw.cpp  io_glfw.h
src/frontends/tui/: tui_commands.cpp  tui_commands.h  tui_constants.h  tui_draw.cpp  tui_draw.h  tui_frontend.cpp  tui_frontend.h  tui_input.cpp  tui_input.h  tui_renderer.cpp  tui_renderer.h  tui_state.h  tui_support.cpp  tui_support.h  tui_windows.cpp  tui_windows.h
src/machine/: cpu.cpp  cpu.h  display.h  framebuffer.cpp  framebuffer.h  io.h  keypad.h  keypad_state.cpp  keypad_state.h  memory.cpp  memory.h  rom_loader.cpp  rom_loader.h
tools/: CMakeLists.txt
tools/compiler/: test_sample.c8  test_simple.c8
tools/compiler/include/: ast.h  codegen.h  opcode_mapper.h  parser.h  register_allocator.h
tools/compiler/src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  opcode_mapper.cpp  parser.cpp  register_allocator.cpp
tools/compiler/test/: test_label_generator.cpp  test_opcode_mapper.cpp  test_register_allocator.cpp  test_symbol_table.cpp
tools/decompiler/src/: main.cpp
